# xviz

./: CMakeLists.txt  LICENSE  README.md
CMake/: Config.cmake.in  FindEigen3.cmake  FindFFmpeg.cmake  FindHarfBuzz.cmake  FindThirdParty.cmake  Install.cmake  Setup.cmake  Uninstall.cmake.in  version.h.in
src/: CMakeLists.txt
src/client/data/: panels.json
src/client/qt/: CMakeLists.txt  annotation.cpp  annotation.hpp  chart_element.cpp  chart_element.hpp  chart_panel.cpp  chart_panel.hpp  client.cpp  client.hpp  image_element.cpp  image_element.hpp  image_loader.cpp  image_loader.hpp  image_panel.cpp  image_panel.hpp  image_rb.cpp  image_rb.hpp  image_toolbar.cpp  image_tools.cpp  image_widget.cpp  image_widget.hpp  main.cpp  main_window.cpp  main_window.hpp  panel.cpp  panel.hpp  panel_config.cpp  panel_config.hpp  qt_graphics_helpers.cpp  qt_graphics_helpers.hpp  resource_loader.cpp  resource_loader.hpp  scene_element.cpp  scene_element.hpp  session_config.cpp  session_config.hpp  tabular_element.cpp  tabular_element.hpp  ui_element_factory.cpp  ui_element_factory.hpp  (+1 more)
src/client/qt/chart/: axis.cpp  axis.hpp  bar_chart.cpp  bar_chart.hpp  chart_widget.cpp  chart_widget.hpp  color_ramp.cpp  color_ramp.hpp  legend.cpp  legend.hpp  line_chart.cpp  line_chart.hpp  raster_chart.cpp  raster_chart.hpp  tics.cpp  tics.hpp
src/client/qt/scene/: material.cpp  material.hpp  mesh_data.cpp  mesh_data.hpp  offscreen.cpp  ogl_shaders.cpp  renderer.cpp  renderer.hpp  shader.cpp  shadow_map.cpp  shadow_map.hpp  shadow_map_renderer.hpp  trackball.cpp  util.cpp  util.hpp  viewer.cpp  viewer.hpp
src/client/qt/scene/shaders/: common.vs.hpp  constant.fs.hpp  per_vertex.fs.hpp  phong.fs.hpp  phong_common.fs.hpp  shadow_map.fs.hpp  shadows.fs.hpp
src/client/web/src/: index.js
src/common/: image.cpp  matrix.cpp  resource_manager.cpp  shader.cpp  shader.hpp  transform.cpp  vector.cpp
src/common/shaders/: common.vs.hpp  constant.fs.hpp  phong_common.fs.hpp  shadow_map.vs.hpp  shadows.fs.hpp
src/core/: annotation.cpp  brush.cpp  chart.cpp  colormap.cpp  font.cpp  image.cpp  raster_chart.cpp
src/core/physics/: collision.cpp  multi_body.cpp  sensor.cpp  soft_body.cpp
src/core/robot/: robot_scene.cpp
src/core/scene/: assimp_loader.cpp  camera.cpp  geometry.cpp  intersect.cpp  intersect.hpp  mesh.cpp  node.cpp  node_helpers.cpp  octree.cpp  raycaster.cpp  scene.cpp
src/gui/: manipulator.cpp  offscreen.cpp  rotation_manipulator.cpp  scaling_manipulator.cpp  trackball.cpp  translation_manipulator.cpp  viewer.cpp  viewer_glfw.cpp
src/gui/qt/: trackball.cpp  viewer.cpp
src/lib/: CMakeLists.txt  bar_chart.cpp  image.cpp  line_chart.cpp  marker.cpp  pen.cpp  tabular.cpp
src/lib/messages/: CMakeLists.txt  core.proto  scene.proto  style.proto
src/lib/physics/: constraints.cpp  kinematic.cpp  multi_body.cpp  rigid_body.cpp  world.cpp
src/lib/robot/: urdf_loader.cpp  urdf_robot.cpp
src/lib/scene/: camera.cpp  drawable.cpp  geometry.cpp  material.cpp
src/messages/: drawable.proto  scene.proto  session.proto  style.proto
src/overlay/: canvas.cpp  flex_box.cpp  font_manager.cpp  frame.cpp  gl_image.cpp  gl_image.hpp  gl_rect.cpp  gl_rect.hpp  glyph_cache.cpp  glyph_cache.hpp  image_box.cpp  overlay.cpp  scrptrun.h  text.cpp  text_engine.cpp  text_engine.hpp  text_item.cpp  text_item.hpp  text_layout_engine.cpp  text_layout_engine.hpp
src/physics/: cloth.cpp  collision_object.cpp  constraint.cpp  particle.cpp  solver.cpp  spatial_hashing.cpp  spatial_hashing.hpp  world.cpp
src/renderer/: font_manager.cpp  font_manager.hpp  glyph_cache.cpp  glyph_cache.hpp  material_program.cpp  material_program.hpp  mesh_data.cpp  mesh_data.hpp  ogl_shaders.cpp  renderer.cpp  renderer_impl.cpp  renderer_impl.hpp  resource_manager.cpp  resource_manager.hpp  scene_loader.cpp  scene_loader.hpp  shader.cpp  shader.hpp  shadow_map.cpp  shadow_map.hpp  text.cpp  text_item.cpp  text_item.hpp  text_layout.cpp  text_layout.hpp  text_layout_engine.cpp  text_layout_engine.hpp  texture_data.cpp  texture_data.hpp  util.hpp
src/renderer/gl/: gl3w.c  gl3w.h  glcorearb.h
src/renderer/shaders/: common.vs.hpp  constant.fs.hpp  lights.hpp  per_vertex.fs.hpp  phong.fs.hpp  phong_common.fs.hpp  phong_vars.fs.hpp  shadow_map.fs.hpp  shadow_map.vs.hpp  shadows.fs.hpp  wireframe.hpp
src/robot/: robot_scene.cpp  urdf_loader.cpp  urdf_robot.cpp
src/scene/: assimp_loader.cpp  camera.cpp  drawable.cpp  geometry.cpp  intersect.cpp  material.cpp  node.cpp  node_helpers.cpp  octree.cpp  raycaster.cpp  scene.cpp
src/server/: CMakeLists.txt  channel.cpp  server.cpp  session.hpp  ws_server.cpp  ws_server.hpp
src/types/: bar_chart.cpp  brush.cpp  chart.cpp  color.cpp  drawable.cpp  image.cpp  line_chart.cpp  marker.cpp  path.cpp  tabular.cpp  xform.cpp
src/types/scene/: assimp_loader.cpp  mesh.cpp  node.cpp  scene.cpp
src/util/: json_reader.cpp  json_reader.hpp  json_writer.cpp  json_writer.hpp
test/: CMakeLists.txt  animation.cpp  channel.hpp  manipulators.cpp  offscreen.cpp  picking.cpp  renderer.cpp  robot.cpp  shadows.cpp  sim_gui.cpp  sim_gui.hpp  skeleton.cpp  test_cloth.cpp  test_glfw.cpp  test_ws.cpp  util.cpp  util.hpp
test/data/robots/: pr2_gripper.urdf
test/mh/: CMakeLists.txt  bvh.cpp  bvh.hpp  main.cpp  make_texture.cpp  mhx2.hpp  mhx2_importer.cpp  mhx2_importer.hpp  mhx2_viz_scene.cpp  mhx2_viz_scene.hpp  pose.hpp  save_part.py  skinned_mesh.hpp
test/physics/: CMakeLists.txt  body.hpp  bullet_gui.cpp  bullet_gui.hpp  cloth.cpp  cloth.hpp  collision_object.cpp  collision_object.hpp  constraint.cpp  constraint.hpp  particle.cpp  particle.hpp  physics.hpp  solver.cpp  solver.hpp  spatial_hashing.cpp  spatial_hashing.hpp  test_bullet.cpp  test_cartpole.cpp  test_cloth.cpp  test_gripper.cpp  test_robot.cpp  test_rope.cpp  world.cpp  world.hpp
test/qt/: CMakeLists.txt  image_view.cpp  image_view.hpp  image_view.qrc  test_animation.cpp  test_client.cpp  test_image_view.cpp  test_offscreen.cpp  test_picking.cpp  test_robot.cpp  test_scene.cpp  test_shapes.cpp  test_skeleton.cpp
(+143 files in other folders)
